rewrite infer mvn dependencies